--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "parallax-js": "^3.1.0",
