--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "rough-notation": "^0.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
